updated faq and metadata

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <title>Quiztelify | Generate NPTEL Quizzes Instantly</title>
   <meta name="description" content="Quiztelify helps you generate NPTEL quizzes from PDFs or choose from preloaded weekly quizzes. Practice and test modes included. Free, fast, and simple.">
+  <meta name="keywords" content="quiztelify,nptel,quiz,generator,practice,test,pdf,free,online learning,introduction to machine learning,programming in python,programming in java,blockchain and its applications,cloud computing,artificial intelligence,signals and systems,data science for engineers,cyber security,engineering mechanics,programming in c,wildlife ecology,forests and their management,conservation economics,psychology of everyday,psychology one">
 
   <link rel="canonical" href="https://nptel-quiz-app-kappa.vercel.app/" />
 
@@ -29,55 +30,56 @@
   "mainEntity": [
     {
       "@type": "Question",
-      "name": "What is the purpose of the NPTEL Quiz website?",
+      "name": "How can I practice quizzes for NPTEL courses?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "The website allows students to access, attempt, and review quizzes from various NPTEL courses in an interactive format."
+        "text": "You can upload NPTEL course PDFs or select from a list of weekly quizzes to practice in either test or practice mode."
       }
     },
     {
       "@type": "Question",
-      "name": "Are the quizzes official NPTEL content?",
+      "name": "Are the quizzes based on real NPTEL course content?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Yes, the questions are sourced directly from NPTEL courses but reformatted for better accessibility and engagement."
+        "text": "Yes, the quizzes are generated from official NPTEL course material and curated for better accessibility."
       }
     },
     {
       "@type": "Question",
-      "name": "Can I track my progress on different quizzes?",
+      "name": "Can I upload my own NPTEL PDF files to generate quizzes?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Currently, progress tracking is local to your session. We are working on persistent user profiles in upcoming updates."
+        "text": "Yes, the platform allows you to upload NPTEL PDFs, which are parsed to create interactive quizzes."
       }
     },
     {
       "@type": "Question",
-      "name": "Is the website free to use?",
+      "name": "Is progress saved after I complete a quiz?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Absolutely! This platform is completely free and open to all learners."
+        "text": "Progress is stored locally in your current session. Persistent profiles and history are planned for future updates."
       }
     },
     {
       "@type": "Question",
-      "name": "Are there solutions or explanations provided?",
+      "name": "Is this quiz tool free to use?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Yes, after submitting a quiz, you will receive correct answers along with brief explanations for better understanding."
+        "text": "Yes, it is completely free and open for anyone to use without login or payment."
       }
     },
     {
       "@type": "Question",
-      "name": "How often are new quizzes added?",
+      "name": "What are the available quiz modes?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "We update the quiz bank weekly with new courses and questions as they become available from NPTEL."
+        "text": "You can choose between Practice Mode, which shows answers immediately, and Test Mode, which hides them until submission."
       }
     }
   ]
 }
 </script>
+
 </head>
   <body class="min-h-screen w-screen bg-[#060010] overflow-x-hidden overflow-y-auto m-0">
     <div id="root" class="w-screen h-full min-h-screen"></div>
