updated metadata url

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <meta name="description" content="Quiztelify helps you generate NPTEL quizzes from PDFs or choose from preloaded weekly quizzes. Practice and test modes included. Free, fast, and simple.">
   <meta name="keywords" content="quiztelify,nptel,quiz,generator,practice,test,pdf,free,online learning,introduction to machine learning,programming in python,programming in java,blockchain and its applications,cloud computing,artificial intelligence,signals and systems,data science for engineers,cyber security,engineering mechanics,programming in c,wildlife ecology,forests and their management,conservation economics,psychology of everyday,psychology one">
 
-  <link rel="canonical" href="https://quiztelify.vercel.app/" />
+  <link rel="canonical" href="https://quiztelify.karnx.dev/" />
 
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://quiztelify.vercel.app/" />
+  <meta property="og:url" content="https://quiztelify.karnx.dev/" />
   <meta property="og:title" content="Quiztelify | Generate NPTEL Quizzes Instantly" />
   <meta property="og:description" content="Generate quizzes from PDFs or use curated NPTEL quizzes. Practice or test mode. Ideal for students." />
-  <meta property="og:image" content="https://quiztelify.vercel.app/Opengraph.png" />
+  <meta property="og:image" content="https://quiztelify.karnx.dev/Opengraph.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://quiztelify.vercel.app/" />
+  <meta name="twitter:url" content="https://quiztelify.karnx.dev/" />
   <meta name="twitter:title" content="Quiztelify | Generate NPTEL Quizzes Instantly" />
   <meta name="twitter:description" content="Generate and attempt NPTEL quizzes with ease. PDF parser + curated sets." />
-  <meta name="twitter:image" content="https://quiztelify.vercel.app/Opengraph.png" />
+  <meta name="twitter:image" content="https://quiztelify.karnx.dev/Opengraph.png" />
 
   <script type="application/ld+json">
 {
