--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
   ]
 }
 </script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GNJ1VVW5FG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GNJ1VVW5FG');
+  </script>
 </head>
   <body class="min-h-screen w-screen bg-[#060010] overflow-x-hidden overflow-y-auto m-0">
     <div id="root" class="w-screen h-full min-h-screen"></div>
